--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,7 @@ html {
     position: relative;
     margin-top: 46px;
     padding-top: 50%; /* 50% chiều ngang của chính nó*/
-    background: url('assets/img/Slider/slider2.jpg') top center / cover no-repeat;
+    background: url('./assets/img/Slider/slider2.jpg') top center / cover no-repeat;
 }
 
 #slider .text-content {
